Fixed errors in some GenerativeMoveRules, added simple AIPlayer support via AlphaBetaNegamax and different GameStateEvaluator implementations, deleted UIClient and modularized it into ChessUIClient ecosystem, renamed Position to Square, added StaleMateRule, added NoPiecesRule, added BitMap for future use